--- a/environment/development.yaml
+++ b/environment/development.yaml
@@ -6,4 +6,7 @@ db:
 server:
   host: "0.0.0.0"
   port: 8080
-
+token:
+  internal: "7MzCLAmHrgz5bBUGzI5KrTIrkG0vyQkKs"
+  symmetric: "Kg4gc&+9v4vLq;kqK#CNtE}hW3dNn:VM"
+  access_token_duration: "15m"
